cmake_minimum_required(VERSION 3.5)

project(cxFWK )

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
INCLUDE_DIRECTORIES(./ $ENV{BOOST_DIR} )
add_executable(eureka  program/eureka.cpp )
add_executable(example_service  example/example_service.cpp )
add_executable(example_ws_server  example/example_ws_server.cpp )
add_executable(example_log example/example_log.cpp  )
add_executable(example_json example/example_json.cpp  )

IF (WIN32)
        target_link_libraries(eureka -lpthread -lwsock32 -lws2_32)
        target_link_libraries(example_service -lpthread -lwsock32 -lws2_32)
        target_link_libraries(example_ws_server -lpthread -lwsock32 -lws2_32)
        MESSAGE(STATUS "Now is windows.")
ELSEIF (APPLE)
        MESSAGE(STATUS "Now is Apple systens.")
ELSEIF (UNIX)
        target_link_libraries(eureka -lpthread )
        target_link_libraries(example_service -lpthread )
        target_link_libraries(example_ws_server -lpthread )
        MESSAGE(STATUS "Now is UNIX-like OS's. Including aPPLE os x  and CygWin.")
ENDIF ()

